# webhook2amqp

./: .editorconfig  .gitignore  Cargo.toml  config.jsonc  flake.nix
lua/: .gitignore  Makefile  mod.lua  router.moon
lua/handlers/emailengine/: init.moon
lua/handlers/newreleases/: init.moon
lua/lib/: inspect.lua  sha256.lua  str.lua  url.lua
src/: lua.rs  lua_config.rs  main.rs  request.rs  svc.rs  tokio_util.rs
