[package]
name = "webhook2amqp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.2"
futures = "0.3"
futures-util = "0.3"
hyper = { version = "0.14", features = ["http1", "tcp", "server"] }
lapin = "2.1.1"
mime = "0.3"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.15"
